--- a/src/App.css
+++ b/src/App.css
@@ -20,18 +20,28 @@
   width: 100px;
 }
 
-.container-card {
-  display: flex;
-  gap: 35px;
-  flex-wrap: wrap;
-}
-
 .card {
   border: 1px solid white;
+  width: 250px;
+  text-align: center;
 }
 
 .card img {
-  width: 200px;
+  width: 100%;
   height: 200px;
   object-fit: cover;
+  border-bottom: 1px solid white;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 35px;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.filter-btn {
+  margin: 20px;
+  padding: 20px;
+  cursor: pointer;
 }
