--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,10 @@
   padding: 20px;
   cursor: pointer;
 }
+.filter{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 50px;
+}
