--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,27 @@
   padding: 20px;
   cursor: pointer;
 }
-.filter{
+.filter {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   margin: 0 50px;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 300px;
+  background-color: #3a3a3a;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 35px;
+  justify-content: center;
+  margin-top: 50px;
+}
+.login-btn {
+  margin-right: 30px;
+  
 }
