--- a/src/App.css
+++ b/src/App.css
@@ -67,5 +67,11 @@
 }
 .login-btn {
   margin-right: 30px;
-  
+}
+.search {
+  display: flex;
+  gap: 10px;
+}
+.search input {
+  padding: 5px 10px;
 }
